Corrige os erros de código

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <p class="header__subtitle">
           As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
           cotidiano.
+          <a class="header__link" href="#">Saiba mais &rarr;</a>
         </p>
-        <a class="header__link" href="#">Saiba mais &rarr;</a>
         <img
           class="header__main-illustration"
           src="images/header-image.png"
@@ -30,10 +30,8 @@
       </header>
       <main class="content">
         <section class="description">
-          <div class="two-columns">
-            <a class="two-columns__brief" href="#"
-              >O maior problema da educação</a
-            >
+          <article class="two-columns">
+            <h2 class="two-columns__brief">O maior problema da educação</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Seja na escola ou na universidade, o assunto que ninguém vai te
@@ -62,68 +60,66 @@
                 aprendizado eficaz.
               </p>
             </div>
-          </div>
+          </article>
         </section>
         <section class="digits">
           <h2 class="section-title">Fatos e números</h2>
           <h3 class="section-subtitle">Sobre o cérebro e o aprendizado</h3>
-          <div class="table">
-            <ul class="table__cell">
-              <li class="table__heading">86 bilhões</li>
-              <li class="table__text">
-                O número de neurônios no cérebro humano
-              </li>
-            </ul>
-            <ul class="table__cell">
-              <li class="table__heading">73%</li>
-              <li class="table__text">
+          <ul class="table">
+            <li class="table__cell">
+              <h4 class="table__heading">86 bilhões</h4>
+              <p class="table__text">O número de neurônios no cérebro humano</p>
+            </li>
+            <li class="table__cell">
+              <h4 class="table__heading">73%</h4>
+              <p class="table__text">
                 A porcentagem de adultos nos EUA que se consideram aprendizes
                 para a vida toda.
-              </li>
-              <li class="table__text">Centro de Pesquisas Pew</li>
-            </ul>
-            <ul class="table__cell">
-              <li class="table__heading">1,000 terabytes</li>
-              <li class="table__text">
+              </p>
+              <p class="table__text">Centro de Pesquisas Pew</p>
+            </li>
+            <li class="table__cell">
+              <h4 class="table__heading">1,000 terabytes</h4>
+              <p class="table__text">
                 A capacidade de armazenamento de informação de um humano
-              </li>
-            </ul>
-            <ul class="table__cell">
-              <li class="table__heading">500 trilhões</li>
-              <li class="table__text">
+              </p>
+            </li>
+            <li class="table__cell">
+              <h4 class="table__heading">500 trilhões</h4>
+              <p class="table__text">
                 O número de sinapses nervosas responsáveis pelo aprendizado em
                 um adulto humano médio
-              </li>
-            </ul>
-            <ul class="table__cell" style="margin-top: 60px">
-              <li class="table__heading">420 trilhões</li>
-              <li class="table__text">
+              </p>
+            </li>
+            <li class="table__cell" style="margin-top: 60px">
+              <h4 class="table__heading">420 trilhões</h4>
+              <p class="table__text">
                 O número de adultos abaixo de 25 anos sem educação suficiente
                 para encontrar empregos.
-              </li>
-              <li class="table__text">Banco Mundial, 2017</li>
-            </ul>
-            <ul class="table__cell" style="margin-top: 60px">
-              <li class="table__heading">26 anos de idade</li>
-              <li class="table__text">
+              </p>
+              <p class="table__text">Banco Mundial, 2017</p>
+            </li>
+            <li class="table__cell" style="margin-top: 60px">
+              <h4 class="table__heading">26 anos de idade</h4>
+              <p class="table__text">
                 A idade com que Albert Einstein publicou o seu artigo inovador
                 sobre a relatividade especial
-              </li>
-            </ul>
-            <ul class="table__cell" style="margin-top: 60px">
-              <li class="table__heading">1885</li>
-              <li class="table__text">
+              </p>
+            </li>
+            <li class="table__cell" style="margin-top: 60px">
+              <h4 class="table__heading">1885</h4>
+              <p class="table__text">
                 Desenvolvimento da curva de esquecimento
-              </li>
-            </ul>
-            <ul class="table__cell" style="margin-top: 60px">
-              <li class="table__heading">1897</li>
-              <li class="table__text">
+              </p>
+            </li>
+            <li class="table__cell" style="margin-top: 60px">
+              <h4 class="table__heading">1897 trilhões</h4>
+              <p class="table__text">
                 Publicação da pesquisa de Ivan Pavlov sobre condicionamento
                 clássico
-              </li>
-            </ul>
-          </div>
+              </p>
+            </li>
+          </ul>
         </section>
         <section class="feynman">
           <img
@@ -146,77 +142,79 @@
           grande triângulo azul, sobre o qual Josh Kaufman reclama
           propriedade"
           />
-          <h2 class="section-title_theme_dark">
+          <h2 class="section-title section-title_theme_dark">
             Dez princípios para adquirir habilidades de forma rápida
           </h2>
-          <h3 class="section-subtitle_theme_dark">por Josh Kaufman</h3>
-          <div class="table_theme_dark">
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">1</li>
-              <li class="table__text_theme_dark">
+          <h3 class="section-subtitle section-subtitle_theme_dark">
+            por Josh Kaufman
+          </h3>
+          <ul class="table table_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">1</h4>
+              <p class="table__text table__text_theme_dark">
                 Escolha um projeto que te traga interesse
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">2</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">2</h4>
+              <p class="table__text table__text_theme_dark">
                 Foque a sua energia em uma habilidade por vez
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">3</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">3</h4>
+              <p class="table__text table__text_theme_dark">
                 Defina o seu nível alvo de performance
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">4</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">4</h4>
+              <p class="table__text table__text_theme_dark">
                 Desconstrua a habilidade em sub-habilidades
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">5</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">5</h4>
+              <p class="table__text table__text_theme_dark">
                 Obtenha ferramentas críticas
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">6</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">6</h4>
+              <p class="table__text table__text_theme_dark">
                 Elimite as barreiras para praticar
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">7</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">7</h4>
+              <p class="table__text table__text_theme_dark">
                 Dedique tempo para a prática
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">8</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">8</h4>
+              <p class="table__text table__text_theme_dark">
                 Crie ciclos de feedback rápidos
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">9</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">9</h4>
+              <p class="table__text table__text_theme_dark">
                 Pratique usando o relógio, em intervalos curtos de tempo
-              </li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">10</li>
-              <li class="table__text_theme_dark">
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h4 class="table__heading table__heading_theme_dark">10</h4>
+              <p class="table__text table__text_theme_dark">
                 Dê ênfase a quantidade e velocidade
-              </li>
-            </ul>
-          </div>
+              </p>
+            </li>
+          </ul>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__columns_content_copyright">
+          <div class="footer__column footer__columns_content_copyright">
             <img
               class="logo_place_footer"
               src="images/logo_place_footer.png"
@@ -224,30 +222,30 @@
             />
             <h4 class="footer__author">&copy; 2023 Elionay</h4>
           </div>
-          <div class="footer__columns_content_about">
+          <div class="footer__column footer__column_content_about">
             <h4 class="footer__column-heading">Sobre Practicum by Yandex</h4>
             <ul class="footer__list">
-              <li class="footer__column-link">Página Inicial</li>
-              <li class="footer__column-link">Missão</li>
-              <li class="footer__column-link">Profissões</li>
+              <li><a class="footer__column-link">Página Inicial</a></li>
+              <li><a class="footer__column-link">Missão</a></li>
+              <li><a class="footer__column-link">Profissões</a></li>
             </ul>
           </div>
-          <div class="footer__columns_content_social">
+          <div class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Mídia social</h4>
             <ul class="footer__list">
-              <li class="footer__column-link">
+              <li>
                 <img
                   class="footer__social-icons"
                   src="images/facebook_white.svg"
                   alt="Ícone do Facebook"
-                />Facebook
+                /><a class="footer__column-link">Facebook</a>
               </li>
-              <li class="footer__column-link">
+              <li>
                 <img
                   class="footer__social-icons"
                   src="images/instagram_white.svg"
                   alt="Ícone do Instagram"
-                />Instagram
+                /><a class="footer__column-link">Instagram</a>
               </li>
             </ul>
           </div>
