building the section cards

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aprendendo a aprender</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
+    <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body>
     <div class="page">
@@ -26,7 +26,7 @@
           src="images/header-image.png"
           alt="Imagem de um pensador refletindo no alto de uma montanha."
         />
-        <div class="header__square"></div>
+        <div class="header__square rotation"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -62,6 +62,82 @@
             </div>
           </article>
         </section>
+        <section class="techniques">
+          <h2 class="section-title">Aprender Técnicas</h2>
+          <h3 class="section-subtitle">
+            As Cinco estratégias de Barbara Oakley
+          </h3>
+          <ul class="cards">
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="images/images_sprint-2/cards-attention.png"
+                alt="Uma foto da obra de Brianna Wiest: 
+                101 reflexões que vão mudar a sua forma de pensar"
+              />
+              <h4 class="cards__title">As Duas Maneiras de Pensar</h4>
+              <p class="cards__description">
+                Uma compreensão profunda surge da capacidade de alternar entre o
+                pensamento difuso e o focado.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="images/images_sprint-2/cards-recall.png"
+                alt="Estatueta de criança pensando"
+              />
+              <h4 class="cards__title">Recordar</h4>
+              <p class="cards__description">
+                Melhorar sua capacidade de para recordar pequenas informações
+                importantes ajuda a conectar diferentes partes do cérebro.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="images/images_sprint-2/cards-interleaving.png"
+                alt="Uma foto da parte de dentro da Estação World Trade Center, 
+                terminal do sistema PATH, dentro do complexo do World Trade Center 
+                no distrito financeiro de Manhattan, na cidade de Nova Iorque."
+              />
+              <h4 class="cards__title">Intercalar</h4>
+              <p class="cards__description">
+                Quando você aprende diferentes habilidades ao mesmo tempo, elas
+                fortalecem umas às outras.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="images/images_sprint-2/cards-question.png"
+                alt="Uma foto da Biblioteca da Cidade de Stuttgart, uma construção em 
+                formato de cubo com interior minimalista e bem iluminadoprojetada pelo 
+                arquiteto Eun Young Yi."
+              />
+              <h4 class="cards__title">Questões</h4>
+              <p class="cards__description">
+                Quando estiver escutando seu professor, pense em uma boa
+                pergunta, algo que você realmente gostaria de saber.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
+                class="cards__image"
+                src="images/images_sprint-2/cards-competence.png"
+                ]
+                alt="Imagem de uma mão segurando uma pilha de sete livros."
+              />
+              <h4 class="cards__title">Ilusão da Competência</h4>
+              <p class="cards__description">
+                Teste a si mesmo, anote, fale com outra pessoa e repita o
+                processo de diferentes situações. Somente assim você vai ter
+                certeza de que entendeu alguma coisa.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="video"></section>
         <section class="digits">
           <h2 class="section-title">Fatos e números</h2>
           <h3 class="section-subtitle">Sobre o cérebro e o aprendizado</h3>
