--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <img
                 class="cards__image"
                 src="images/images_sprint-2/cards-attention.png"
-                alt="Uma foto da obra de Brianna Wiest: 
+                alt="Uma foto da obra de Brianna Wiest:
                 101 reflexões que vão mudar a sua forma de pensar"
               />
               <h4 class="cards__title">As Duas Maneiras de Pensar</h4>
@@ -97,8 +97,8 @@
               <img
                 class="cards__image"
                 src="images/images_sprint-2/cards-interleaving.png"
-                alt="Uma foto da parte de dentro da Estação World Trade Center, 
-                terminal do sistema PATH, dentro do complexo do World Trade Center 
+                alt="Uma foto da parte de dentro da Estação World Trade Center,
+                terminal do sistema PATH, dentro do complexo do World Trade Center
                 no distrito financeiro de Manhattan, na cidade de Nova Iorque."
               />
               <h4 class="cards__title">Intercalar</h4>
@@ -111,8 +111,8 @@
               <img
                 class="cards__image"
                 src="images/images_sprint-2/cards-question.png"
-                alt="Uma foto da Biblioteca da Cidade de Stuttgart, uma construção em 
-                formato de cubo com interior minimalista e bem iluminadoprojetada pelo 
+                alt="Uma foto da Biblioteca da Cidade de Stuttgart, uma construção em
+                formato de cubo com interior minimalista e bem iluminadoprojetada pelo
                 arquiteto Eun Young Yi."
               />
               <h4 class="cards__title">Questões</h4>
@@ -137,7 +137,59 @@
             </li>
           </ul>
         </section>
-        <section class="video"></section>
+        <section class="video">
+          <h2 class="section-title">Conversas TED</h2>
+          <h3 class="section-subtitle">Para os amantes da procrastinação</h3>
+          <div class="video__iframes">
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/watch?v=5MgBikgcWnY"
+              width="515px"
+              height="316px"
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/watch?v=arj7oStGLkU"
+              width="515px"
+              height="316px"
+            ></iframe>
+          </div>
+        </section>
+        <section class="oakley">
+          <article class="two-columns">
+            <h2 class="two-columns__brief">A história de Barbara Oakley</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                A matemática não veio naturalmente para Barbara na infância. Ela
+                se identificava mais com ciências humanas, e que não era muito
+                brilhante nisso. Com o objetivo de se especializar em
+                linguística, após terminar seus estudos, ela se alistou no
+                Exército, que a enviou para aprender russo. Após vários anos de
+                serviço, tornando-se capitã, Barbara deixou o Exército e decidiu
+                estudar engenharia. Foi nesta época que ela desenvolveu a
+                metodologia de aprendizagem, pois precisou reprogramar seu
+                cérebro para um tipo diferente de aprendizagem. Quando algo não
+                ocorre naturalmente, então é preciso trabalhar duro para obter o
+                conhecimento que outras pessoas podem obter rapidamente, dando
+                assim uma visão mais profunda e abrangente do assunto.
+              </p>
+            </div>
+          </article>
+        </section>
+        <section class="feynman">
+          <img
+            class="feynman__image"
+            src="images/feynman.png"
+            alt="Uma foto
+      de Richard Feynman, um físico quântico mundialmente conhecido.
+      Sua técnica em relação à aprendizagem deriva dos seus métodos de estudo quando
+      ele era um estudante em Princeton."
+          />
+          <h2 class="feynman__title">A Técnica de Feynman</h2>
+          <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
+          <a class="feynman__link" href="#">Mais &rarr;</a>
+        </section>
         <section class="digits">
           <h2 class="section-title">Fatos e números</h2>
           <h3 class="section-subtitle">Sobre o cérebro e o aprendizado</h3>
@@ -197,18 +249,28 @@
             </li>
           </ul>
         </section>
-        <section class="feynman">
-          <img
-            class="feynman__image"
-            src="images/feynman.png"
-            alt="Uma foto
-      de Richard Feynman, um físico quântico mundialmente conhecido.
-      Sua técnica em relação à aprendizagem deriva dos seus métodos de estudo quando
-      ele era um estudante em Princeton."
-          />
-          <h2 class="feynman__title">A Técnica de Feynman</h2>
-          <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
-          <a class="feynman__link" href="#">Mais &rarr;</a>
+        <section class="khan">
+          <article class="khan__container">
+            <h2 class="khan__author">Salman Khan</h2>
+            <h3 class="khan__title">The One World Schoolhouse</h3>
+            <p class="khan__quote">
+              A paixão e inovação de Sal Khan é transformar o aprendizado para
+              milhões de estudantes no mundo todo. O livro The One World
+              Schoolhouse é uma leitura obrigatória para quem quer melhorar a
+              educação e que os estudantes habilidades e conhecimentos
+              necessários na escola, na carreira, e na vida em geral.
+            </p>
+            <h4 class="khan__quote-author">George Lucas</h4>
+            <h5 class="khan__quote-author-subline">Diretor</h5>
+            <div class="khan__book-container">
+              <img
+                class="khan__book-pic"
+                src="images/images_sprint-2/khan-book-2.png"
+                alt="Foto da capa do livro 'The One World School House' de Salman Khan"
+              />
+              <a class="khan__buy-link">Comprar &rarr;</a>
+            </div>
+          </article>
         </section>
         <section class="kaufman">
           <img
