corrige o index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
               <img
                 class="cards__image"
                 src="images/images_sprint-2/cards-competence.png"
-                ]
                 alt="Imagem de uma mão segurando uma pilha de sete livros."
               />
               <h4 class="cards__title">Ilusão da Competência</h4>
@@ -144,24 +143,21 @@
               class="video__iframe"
               src="https://www.youtube.com/embed/5MgBikgcWnY"
               title="YouTube video player"
-              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
               gyroscope; picture-in-picture; web-share"
               allowfullscreen
-              width="515px"
-              height="316px"
-              allowfullscreen
+              width="515"
+              height="316"
             ></iframe>
             <iframe
               class="video__iframe"
               src="https://www.youtube.com/embed/arj7oStGLkU"
               title="YouTube video player"
-              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
               gyroscope; picture-in-picture; web-share"
               allowfullscreen
-              width="515px"
-              height="316px"
+              width="515"
+              height="316"
             ></iframe>
           </div>
         </section>
