--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column footer__columns_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <img
-              class="logo_place_footer"
+              class="logo logo_place_footer"
               src="images/logo_place_footer.png"
               alt="Logo da Practicum."
             />
