corrige os erros conforme a revisão

--- a/index.html
+++ b/index.html
@@ -146,8 +146,6 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
               gyroscope; picture-in-picture; web-share"
               allowfullscreen
-              width="515"
-              height="316"
             ></iframe>
             <iframe
               class="video__iframe"
@@ -156,8 +154,6 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
               gyroscope; picture-in-picture; web-share"
               allowfullscreen
-              width="515"
-              height="316"
             ></iframe>
           </div>
         </section>
@@ -359,7 +355,7 @@
           <h3 class="section-subtitle">
             Material adicional sobre técnicas e hacks de aprendizagem
           </h3>
-          <div class="resources__logo-zone">
+          <nav class="resources__logo-zone">
             <a class="resources__logo transition" href="#">
               <img
                 class="resources__logo"
@@ -390,7 +386,7 @@
                 adicionar livros a suas estantes pessoais, avaliar e rever livros, ver 
                 o que seus amigos e autores estão lendo. "
             /></a>
-          </div>
+          </nav>
         </section>
       </main>
       <footer class="footer">
